<resources>
    <string name="app_name">Hillforts</string>
    <string name="app_welcome">Welcome to Hillforts</string>
    <string name="hint_hillfortTitle">Hillfort Title</string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="hint_hillfortDescription">Description </string>
    <string name="menu_addHillfort">Add</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="enter_hillfort_title"> Please enter a Hillfort Title </string>
    <string name="save_hillfort"> Save Hillfort </string>
    <string name="edit_hillfort"> Update Hillfort </string>
    <string name="button_addImage"> Add Image </string>
    <string name="add_hillfort_image"> Add Hillfort Image </string>
    <string name="select_hillfort_image">Select hillfort image</string>
    <string name="change_hillfort_image">Change hillfort image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="menu_deleteHillfort">Delete</string>
    <string name="deleted_hillfort">Hillfort Deleted</string>
    <string name="project_hillfort">Project Hillfort</string>
    <string name="designer">Designed by Jeremy Leahy</string>
    <string name="hillfort_added"> Hillfort Added</string>
    <string name="hint_lat">Latitude</string>
    <string name="hint_long">Longitude</string>
    <string name="signup_title">Sign Up</string>
    <string name="hint_email">email address</string>
    <string name="hint_password">password</string>
    <string name="button_signup">Sign up</string>
    <string name="enter_newEmail"> Enter Email Address</string>
    <string name="enter_newPassword"> Enter a Password</string>
    <string name="login_title"> Login</string>
    <string name="button_login"> Login</string>
    <string name="email_not_found">Invalid User Details</string>

    <string name="menu_logout">Logout</string>
    <string name="logout">User logged out</string>
    <string name="hint_firstName"> First Name</string>
    <string name="hint_lastName"> Last Name</string>
    <string name="visited_checkbox">Hillfort Visited</string>
    <string name="name_heading">Hillfort Name:</string>
    <string name="desc_heading">Hillfort Description:</string>
    <string name="lat_heading">Latitude:</string>
    <string name="lng_heading">Longitude:</string>
    <string name="account_settings">Account Settings</string>
    <string name="update_user">Update User</string>
    <string name="menu_settings">Settings</string>
    <string name="notes_heading">Additional Notes:</string>
    <string name="hint_additionalNotes">Additional Notes</string>

    <string name="fill_all_fields">Please fill-in all fields</string>
    <string name="enter_Email">Please enter an email Address</string>
    <string name="enter_Password"> Enter a Password</string>
    <string name="password_short">Password too short</string>
    <string name="hint_password2">Re-enter password</string>
    <string name="password_mismatch">Passwords do not match </string>
    <string name="menu_cancelSignup">Cancel Signup</string>

    <string name="userDetails_updated">User Details Updated</string>

    <string name="menu_deleteUser">Delete</string>
    <string name="menu_userIcon">User</string>

    <string name="deleted_user">User Deleted</string>

    <string name="user_exists">user already exists</string>

    <string name="menu_addMap">Add Map</string>
    <string name="hillfort_title_placeholder">Hillfort Title</string>
    <string name="hillfort_description_placeholder">Hillfort Description</string>
    <string name="hillfortPicture">Hillfort Picture</string>

    <string name="title_activity_placemark_maps">Maps</string>
</resources>